--- a/styles.css
+++ b/styles.css
@@ -1,532 +1,621 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,800&display=swap");
 
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    font-family: 'montserrat';
-    color: #fff;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: "montserrat";
+  color: #fff;
 }
 
-*::selection{
-    color: #a3d421;
-    background-color: #a3d421;
+*::selection {
+  color: #a3d421;
+  background-color: #a3d421;
 }
 
-html, body{
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 
-body::-webkit-scrollbar{
-    display: block;
-    width: 8px;
-    background-color: black;
-    border-left: 3px solid #a3d421;
+body::-webkit-scrollbar {
+  display: block;
+  width: 8px;
+  background-color: black;
+  border-left: 3px solid #a3d421;
 }
 
-body::-webkit-scrollbar-thumb{
-    background-color: white;
-    border-radius: 50px;
+body::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 50px;
 }
 
-#nav{
-    width: 100%;
-    height: 135px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 50px;
-    padding: 0px 125px;
-    position: fixed;
-    z-index: 99;
+#nav {
+  width: 100%;
+  height: 135px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 50px;
+  padding: 0px 125px;
+  position: fixed;
+  z-index: 99;
 }
 
-.cursor{
-    height: 20px;
-    width: 20px;
-    background-color: #95C11E;
-    border-radius: 50%;
-    position: fixed;
-    z-index: 99;
+.cursor {
+  height: 20px;
+  width: 20px;
+  background-color: #95c11e;
+  border-radius: 50%;
+  position: fixed;
+  z-index: 99;
 }
 
-.cursor-blur{
-    height: 350px;
-    width: 350px;
-    background-color: #ccff3e76;
-    border-radius: 50%;
-    position: fixed;
-    filter: blur(100px);
-    z-index: 9;
+.cursor-blur {
+  height: 350px;
+  width: 350px;
+  background-color: #ccff3e76;
+  border-radius: 50%;
+  position: fixed;
+  filter: blur(100px);
+  z-index: 9;
 }
 
 #nav a {
-   text-decoration: none;
-   cursor: pointer;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-video{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: fixed;
-    z-index: -1;
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: fixed;
+  z-index: -1;
 }
 
-#nav h4{
-    text-transform: uppercase;
-    font-weight: 600;
+#nav h4 {
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
-#nav img{
-    height: 74px;
+#nav img {
+  height: 74px;
 }
 
-#main{
-    position: relative;
-    background-color: rgba(0, 0,  0, 0.336);
+#main {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.336);
 }
 
-#page1{
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    z-index: 10;
+#page1 {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  z-index: 10;
 }
 
-#page1 #arrow{
-    width: 200px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border: 2px solid #a3d421;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 30;
-    left: -2%;
-    bottom: 0%;
-    transition: all ease 1s;
+#page1 #arrow {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 2px solid #a3d421;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 30;
+  left: -2%;
+  bottom: 0%;
+  transition: all ease 1s;
 }
 
-#page1 #arrow:hover{
-    scale: 0.4;
-    background-color: #a3d421;
+#page1 #arrow:hover {
+  scale: 0.4;
+  background-color: #a3d421;
 }
 
-#page1 i{
-    font-size: 50px;
+#page1 i {
+  font-size: 50px;
 }
 
-#page1 h1::before{
-    content: "EAT.DRINK.PLAY.";
-    position: absolute;
-    color: black;
-    top: -6px;
-    left: -6px;
-    -webkit-text-stroke: 1px #95C11E;
-    z-index: -1;
+#page1 h1::before {
+  content: "EAT.DRINK.PLAY.";
+  position: absolute;
+  color: black;
+  top: -6px;
+  left: -6px;
+  -webkit-text-stroke: 1px #95c11e;
+  z-index: -1;
 }
 
-#page1 h1{
-    font-size: 140px;
-    font-weight: 800;
-    position: relative;
+#page1 h1 {
+  font-size: 140px;
+  font-weight: 800;
+  position: relative;
 }
 
-#page1 h2{
-    font-size: 30px;
-    font-weight: 900;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    position: relative;
+#page1 h2 {
+  font-size: 30px;
+  font-weight: 900;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  position: relative;
 }
 
-#page1 p{
-    font-size: 20px;
-    font-weight: 400;
-    width: 45%;
+#page1 p {
+  font-size: 20px;
+  font-weight: 400;
+  width: 45%;
 }
 
-#page2{
-    min-height: 100vh;
-    width: 100%;
-    z-index: 10;
+#page2 {
+  min-height: 100vh;
+  width: 100%;
+  z-index: 10;
 }
 
-#scroller{
-    white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-    position: relative;
-    z-index: 10;
+#scroller {
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  position: relative;
+  z-index: 10;
 }
 
-#scroller::-webkit-scrollbar{
-    display: none;
+#scroller::-webkit-scrollbar {
+  display: none;
 }
 
-#scroller-in{
-    display: inline-block;
-    white-space: nowrap;
-    animation-name: scroll;
-    animation-duration: 50s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+#scroller-in {
+  display: inline-block;
+  white-space: nowrap;
+  animation-name: scroll;
+  animation-duration: 50s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
-#scroller h4{
-    display: inline-block;
-    font-size: 120px;
-    font-weight: 900;
-    margin-right: 10px;
-    font-family: sans-serif;
-    color: transparent;
-    transition: all linear 0.4s;
-    -webkit-text-stroke: 2px #ffffff;
+#scroller h4 {
+  display: inline-block;
+  font-size: 120px;
+  font-weight: 900;
+  margin-right: 10px;
+  font-family: sans-serif;
+  color: transparent;
+  transition: all linear 0.4s;
+  -webkit-text-stroke: 2px #ffffff;
 }
 
-#scroller h4:hover{
-    color: #95C11E;
+#scroller h4:hover {
+  color: #95c11e;
 }
 
 @keyframes scroll {
-    from{
-        transform: translateX(0);
-    } to{
-        transform: translate(-100%);
-    }
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translate(-100%);
+  }
 }
 
-#about-us{
-    height: 40vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0px 50px;
-    margin-top: 100px;
-    justify-content: space-around;
-    position: relative;
+#about-us {
+  height: 40vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0px 50px;
+  margin-top: 100px;
+  justify-content: space-around;
+  position: relative;
 }
 
-#about-us img{
-    height: 220px;
-    width: 220px;
-    border-radius: 20px;
-    object-fit: cover;
+#about-us img {
+  height: 220px;
+  width: 220px;
+  border-radius: 20px;
+  object-fit: cover;
 }
 
-#about-us-in{
-    width: 52%;
-    text-align: center;
+#about-us-in {
+  width: 52%;
+  text-align: center;
 }
 
-#about-us-in h3{
-    font-size: 54px;
-    font-weight: 800;
-    margin-bottom: 40px;
+#about-us-in h3 {
+  font-size: 54px;
+  font-weight: 800;
+  margin-bottom: 40px;
 }
 
-#about-us-in p{
-    font-size: 20px;
-    line-height: 35px;
+#about-us-in p {
+  font-size: 20px;
+  line-height: 35px;
 }
 
-#cards-container{
-    height: 90vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    position: relative;
-    z-index: 10;
+#cards-container {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  position: relative;
+  z-index: 10;
 }
 
-.dot-img{
-    height: 130px;
-    margin-left: 60px;
-    margin-bottom: -100px;
-    margin-top: 130px;
+.dot-img {
+  height: 130px;
+  margin-left: 60px;
+  margin-bottom: -100px;
+  margin-top: 130px;
 }
 
-.card{
-    position: relative;
-    height: 90%;
-    width: 25%;
-    border-radius: 14px;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    transition: all ease 0.6s;
+.card {
+  position: relative;
+  height: 90%;
+  width: 25%;
+  border-radius: 14px;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  transition: all ease 0.6s;
 }
 
-#card-1{
-    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-toptracer-768x512.jpg?strip=all&lossy=1&sharp=1&ssl=1);
+#card-1 {
+  background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-toptracer-768x512.jpg?strip=all&lossy=1&sharp=1&ssl=1);
 }
 
-#card-2{
-    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/hero-4-768x768.jpg?strip=all&lossy=1&sharp=1&ssl=1);
+#card-2 {
+  background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/hero-4-768x768.jpg?strip=all&lossy=1&sharp=1&ssl=1);
 }
 
-#card-3{
-    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-lessons-768x511.jpg?strip=all&lossy=1&sharp=1&ssl=1);
+#card-3 {
+  background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-lessons-768x511.jpg?strip=all&lossy=1&sharp=1&ssl=1);
 }
 
-.overlay{
-    width: 100%;
-    height: 100%;
-    background-color: #95C11E;
-    padding: 20px;
-    opacity: 0;
-    transition: all ease 0.6s;
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: #95c11e;
+  padding: 20px;
+  opacity: 0;
+  transition: all ease 0.6s;
 }
 
-.card:hover .overlay{
-    opacity: 1;
+.card:hover .overlay {
+  opacity: 1;
 }
 
 .overlay h4 {
-    color: black;
-    font-size: 40px;
-    font-weight: 800;
-    text-transform: uppercase;
-    margin-bottom: 20px;
+  color: black;
+  font-size: 40px;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .overlay p {
-    font-size: 18px;
-    color: black;
-    line-height: 35px;
-    margin-bottom: 20px;
-} 
-
-
-
-#green-div{
-    margin: 50px 0px;
-    height: 40vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: linear-gradient(5deg, rgba(211,255,0,1) 34%, rgba(3,156,61,1) 100%);
+  font-size: 18px;
+  color: black;
+  line-height: 35px;
+  margin-bottom: 20px;
 }
 
+.carousel-div {
+  position: relative;
+  max-width: 100%;
+  height: 60vh;
+  margin: 10rem 8rem 10rem 8rem;
+  display: flex;
+  gap: 4rem;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#slider {
+  margin: 0 auto;
+  height: 80vh;
+  width: 55%;
+  overflow: hidden;
+}
+
+#slider .slides {
+  overflow: hidden;
+  animation-name: fade;
+  animation-duration: 1s;
+  display: none;
+}
+
+.slides img {
+  object-fit: cover;
+  border-radius: 20px;
+  width: 100%;
+  height: 60vh;
+}
+
+#slider #dot {
+  margin: 0 auto;
+  text-align: center;
+}
+#slider .dot {
+  display: inline-block;
+  border-radius: 50%;
+  background: #a3d421;
+  padding: 6px;
+  margin: 10px 5px;
+}
+
+.active {
+  border: 2px solid white;
+  scale: 1.4;
+  color: #a3d421 !important;
+}
+
+@media (max-width: 567px) {
+  #slider {
+    width: 100%;
+  }
+}
+
+.info-div {
+  width: 50%;
+  padding: 2rem;
+}
+
+.info-div h2 {
+  margin: 2rem 0;
+  font-size: 3rem;
+  font-weight: 800;
+}
+
+.info-div p {
+  font-size: 1.31rem;
+  line-height: 2.3rem;
+  margin-bottom: 1.1rem;
+}
+
+.info-div button {
+  padding: 1rem 2rem;
+  background-color: transparent;
+  border: 3px solid #a3d421;
+  border-radius: 4rem;
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 1rem;
+}
+
+#green-div {
+  margin: 80px 0px;
+  height: 45vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(
+    5deg,
+    rgba(211, 255, 0, 1) 34%,
+    rgba(3, 156, 61, 1) 100%
+  );
+}
 
 #green-div h4 {
-    width: 45%;
-    line-height: 60px;
-    text-align: center;
-    font-weight: 800;
-    color: #000;
-    font-size: 30px;
-    text-transform: uppercase;
+  width: 45%;
+  line-height: 60px;
+  text-align: center;
+  font-weight: 800;
+  color: #000;
+  font-size: 30px;
+  text-transform: uppercase;
 }
 
-#green-div img{
-    height: 100%;
-    object-fit: cover;
-    width: 200px;
-    opacity: 0.5;
+#green-div img {
+  height: 100%;
+  object-fit: cover;
+  width: 200px;
+  opacity: 0.5;
 }
 
-#img1{
-    transform: rotate(180deg);
+#img1 {
+  transform: rotate(180deg);
 }
 
-#page3{
-    height: 100vh;
-    width: 100%;
-    background-color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+#page3 {
+  height: 100vh;
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
-#ex-mark-div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#ex-mark-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#ex-mark-div p{
-    font-weight: 800;
-    font-size: 30px;
-    width: 50%;
-    line-height: 50px;
-    text-align: center;
+#ex-mark-div p {
+  font-weight: 800;
+  font-size: 30px;
+  width: 50%;
+  line-height: 50px;
+  text-align: center;
 }
 
-#ex-mark-div img{
-    height: 60px;
-    position: absolute;
+#ex-mark-div img {
+  height: 60px;
+  position: absolute;
 }
 
-#colon1{
-    left: 15%;
-    top: 20%;
+#colon1 {
+  left: 15%;
+  top: 20%;
 }
 
-#colon2{
-    bottom: 30%;
-    right: 15%;
+#colon2 {
+  bottom: 30%;
+  right: 15%;
 }
 
-#page4{
-    height: 30vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 70px;
-    position: relative;
+#page4 {
+  height: 30vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 70px;
+  position: relative;
 }
 
-.elem{
-    height: 70%;
-    width: 26%;
-    overflow: hidden;
-    border-radius: 20px;
-    position: relative;
-    transition: all ease 1s;
+.elem {
+  height: 70%;
+  width: 26%;
+  overflow: hidden;
+  border-radius: 20px;
+  position: relative;
+  transition: all ease 1s;
 }
 
-.elem h2{
-    width: 100%;
-    height: 100%;
-    background-color: #95C11E;
-    color: #000;
-    font-weight: 800;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-    position: absolute;
-    z-index: 10;
-    text-align: center;
-    padding: 10px;
+.elem h2 {
+  width: 100%;
+  height: 100%;
+  background-color: #95c11e;
+  color: #000;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  position: absolute;
+  z-index: 10;
+  text-align: center;
+  padding: 10px;
 }
 
-.elem img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: all ease 1s;
-    scale: 1.1;
+.elem img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: all ease 1s;
+  scale: 1.1;
 }
 
-.elem:hover h2{
+.elem:hover h2 {
   color: #fff;
   background-color: transparent;
 }
 
-.elem:hover img{
-    scale: 1;
+.elem:hover img {
+  scale: 1;
 }
 
-#page4 h1{
-    font-size: 80px;
-    position: absolute;
-    top: -18%;
-    font-weight: 900;
-    font-family: sans-serif;
-    color: black;
-    -webkit-text-stroke: 2px white;
+#page4 h1 {
+  font-size: 80px;
+  position: absolute;
+  top: -18%;
+  font-weight: 900;
+  font-family: sans-serif;
+  color: black;
+  -webkit-text-stroke: 2px white;
 }
 
 #footer {
-    height: 40vh;
-    width: 100%;
-    background: linear-gradient(to left bottom, #119f3a 0%, #a3d421 80%);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 100px;
-    gap: 6.5vw;
-    padding: 0 100px;
-  }
-  #footer > img {
-    position: absolute;
-    left: 0;
-    height: 100%;
-    z-index: 0;
-  }
-  #f1 img {
-    height: 110px;
-  }
+  height: 40vh;
+  width: 100%;
+  background: linear-gradient(to left bottom, #119f3a 0%, #a3d421 80%);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 100px;
+  gap: 6.5vw;
+  padding: 0 100px;
+}
+#footer > img {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  z-index: 0;
+}
+#f1 img {
+  height: 110px;
+}
 
-  #f1,
-  #f2,
-  #f3,
-  #f4 {
-    width: fit-content;
-    position: relative;
-    z-index: 99;
-    /* background-color: red; */
-  }
+#f1,
+#f2,
+#f3,
+#f4 {
+  width: fit-content;
+  position: relative;
+  z-index: 99;
+  /* background-color: red; */
+}
 
-  #f1{
-    display: block;
-  }
+#f1 {
+  display: block;
+}
 
-  #f2 h3 {
-    font-size: 1.6vw;
-    white-space: nowrap;
-    text-transform: uppercase;
-    color: #000;
-    font-weight: 900;
-    margin-bottom: 8px;
-  }
-  
-  #f3 h3 {
-    font-size: 1.6vw;
-    white-space: nowrap;
-    text-transform: uppercase;
-    color: #000;
-    font-weight: 800;
-    margin-bottom: 8px;
-  }
-  #f4 h4 {
-    font-size: 1vw;
-    white-space: nowrap;
-    text-transform: uppercase;
-    color: #000;
-    font-weight: 600;
-    line-height: 20px;
-    margin-bottom: 8px;
-  }
+#f2 h3 {
+  font-size: 1.6vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 900;
+  margin-bottom: 8px;
+}
 
-  .icon-block{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: 40px;
-  }
+#f3 h3 {
+  font-size: 1.6vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 800;
+  margin-bottom: 8px;
+}
+#f4 h4 {
+  font-size: 1vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 8px;
+}
 
-  .icon-block i{
-    font-size: 30px;
-    color: #000;
-  }
+.icon-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 40px;
+}
 
-  .policy-div{
-    height: 5vh;
-    width: 100%;
-    background-color: black;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: wheat;
-  }
+.icon-block i {
+  font-size: 30px;
+  color: #000;
+}
 
-
-
-
-
+.policy-div {
+  height: 5vh;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: wheat;
+}
